<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger_text">Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="password_text_hint">Password:</string>
    <string name="login_text_button">Login</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="register_text">Register</string>
    <string name="email_text">Email</string>
    <string name="registration_text">Registration</string>
    <string name="password_text">Password</string>
    <string name="name_text">Name</string>
    <string name="last_name_text">Last name</string>
    <string name="how_old_are_you_text">How old are you?</string>
    <string name="sign_up_text_button">Sign up</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="logout_item_menu">Logout</string>
    <string name="reset_password_text_button">Reset password</string>
    <string name="reset_link_sent">The reset link has been successfully sent</string>
    <string name="type_your_message">Type your message:</string>
</resources>